updated css to re-align project-container to center better after resizing window and corrected responsiveness.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,16 +30,22 @@ body{
 }
 
 .profileImg {
-    width: 275px;
+    width: 275px; 
     height: 325px;
     border-radius: 50%;
     box-shadow: 0 8px 8px 0;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 #aboutMe {
     text-align: center;
     padding: 20px;
     padding-top: 80px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 20px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
@@ -70,7 +76,10 @@ h1{
 
 .project-container {
     justify-content: center;
-    padding: 80px;
+    padding: 55px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 #main-footer{
@@ -86,29 +95,29 @@ h1{
 /* Extra small devices (portrait phones, less than 576px) */
  /* Small devices (landscape phones, 576px and up) */
  @media (max-width: 576px) { 
-    .body-container {
-        width: 100%
+    body {
+        width: 90%
     }
 
   }
  
  /* Medium devices (tablets, 768px and up) */
  @media (max-width: 768px) { 
-    .body-container {
-        width: 100%
+    body {
+        width: 90%
     }
   }
  
 /* Large devices (desktops, 992px and up) */
  @media (max-width: 992px) { 
-    .body-container {
-        width: 100%
+    body {
+        width: 90%
     }
   }
  
 /* Extra large devices (large desktops, 1200px and up) */
  @media (max-width: 1200px) { 
-    .body-container {
-        width: 100%
+    body {
+        width: 90%
     }
   }
